server/main-api/src/search/search_executor/snapshots/navigatum_main_api__search__search_executor__test__good_queries-38.snap
---
source: main-api/src/search/search_executor/mod.rs
description: ""
expression: actual
info: audimax should get 0509.EG.980
---
- facet: rooms
  entries:
    - id: 0509.EG.980
      type: room
      name: "0509.EG.980 (\u0019Audimax\u0017, Werner-von-Siemens-Hörsaal)"
      subtext: "stammgelände, Wienandsbau (Z9)"
      subtext_bold: 0980@0509
    - id: 8120.01.101
      type: room
      name: "8120.01.101 (\u0019Audimax\u0017 im Galileo)"
      subtext: "garching, Galileo"
      subtext_bold: Audimax@8120
    - id: 0509.02.986
      type: room
      name: "0509.02.986 ( \u0019Audimax\u0017 Galerie)"
      subtext: "stammgelände, Wienandsbau (Z9)"
      subtext_bold: 1986@0509
    - id: 0509.01.921
      type: room
      name: 0509.01.921 ( Studentenarb. m. DV (HKW))
      subtext: "stammgelände, Wienandsbau (Z9)"
      subtext_bold: Z921@0509
    - id: 0509.01.922
      type: room
      name: 0509.01.922 ( Studentenarb. m. DV (HKW))
      subtext: "stammgelände, Wienandsbau (Z9)"
      subtext_bold: Z922@0509
    - id: 0509.01.923
      type: room
      name: 0509.01.923 ( Studentenarb. m. DV (HKW))
      subtext: "stammgelände, Wienandsbau (Z9)"
      subtext_bold: Z923@0509
    - id: 0509.01.995
      type: room
      name: 0509.01.995 ( Seminarraum m. Vorbereitung)
      subtext: "stammgelände, Wienandsbau (Z9)"
      subtext_bold: Z995@0509
    - id: 0509.02.903
      type: room
      name: 0509.02.903 ( Übung-DV)
      subtext: "stammgelände, Wienandsbau (Z9)"
      subtext_bold: 1903@0509
    - id: 0509.02.919
      type: room
      name: 0509.02.919 ( Studentenarb. m. DV)
      subtext: "stammgelände, Wienandsbau (Z9)"
      subtext_bold: 1919@0509
  n_visible: 9
  estimatedTotalHits: 492
- facet: sites_buildings
  entries:
    - id: "0509"
      type: building
      name: "Wienandsbau, E-Technik / \u0019Audimax\u0017 (Z9)"
      subtext: Gebäude
  n_visible: 0
  estimatedTotalHits: 2
