server/main-api/src/search/search_executor/snapshots/navigatum_main_api__search__search_executor__test__good_queries-40.snap
---
source: main-api/src/search/search_executor/mod.rs
description: ""
expression: actual
info: Immathalle should get 0501.EG.136
---
- facet: rooms
  entries:
    - id: 0501.EG.130C
      type: room
      name: "0501.EG.130C ( Küche \u0019Immatrikulationshalle\u0017)"
      subtext: "stammgelände, Hauptgebäude (Z1)"
      subtext_bold: 0130C@0501
    - id: 0501.EG.136
      type: room
      name: "0501.EG.136 ( \u0019Immatrikulationshalle\u0017)"
      subtext: "stammgelände, Hauptgebäude (Z1)"
      subtext_bold: 0136@0501
    - id: 0501.EG.140
      type: room
      name: "0501.EG.140 ( Durchgangshalle zur \u0019Immathalle\u0017)"
      subtext: "stammgelände, Hauptgebäude (Z1)"
      subtext_bold: 0140@0501
  n_visible: 3
  estimatedTotalHits: 3
- facet: sites_buildings
  entries: []
  n_visible: 0
  estimatedTotalHits: 0
