server/main-api/src/search/search_executor/snapshots/navigatum_main_api__search__search_executor__test__good_queries-42.snap
---
source: main-api/src/search/search_executor/mod.rs
description: Copy/paste search
expression: actual
info: Augustenstraße 44; Raum 209; 2.OG should get 2903.02.209
---
- facet: rooms
  entries: []
  n_visible: 0
  estimatedTotalHits: 0
- facet: sites_buildings
  entries: []
  n_visible: 0
  estimatedTotalHits: 0
