server/main-api/src/search/search_executor/snapshots/navigatum_main_api__search__search_executor__test__good_queries-44.snap
---
source: main-api/src/search/search_executor/mod.rs
description: "'5604.02.033' is a valid result before the two lab course rooms"
expression: actual
info: physik labor mi should get 5604.EG.036
---
- facet: rooms
  entries:
    - id: 0104.U1.404
      type: room
      name: "0104.U1.404 ( \u0019Mi\u0017krostr. Bauele.-\u0019Labor\u0017)"
      subtext: "stammgelände, E-Technik Elektrophysik (N4)"
      subtext_bold: N-1404@0104
    - id: 0104.EG.426
      type: room
      name: "0104.EG.426 ( \u0019Physiklabor\u0017 \u0019mi\u0017t elektromagnetischer Abschir)"
      subtext: "stammgelände, E-Technik Elektrophysik (N4)"
      subtext_bold: N0426@0104
    - id: 5501.01.108
      type: room
      name: "5501.01.108 ( \u0019Mi\u0017krotechniklabor)"
      subtext: "garching, Maschinenwesen (MW)"
      subtext_bold: 1108@5501
    - id: 2806.03.302
      type: room
      name: "2806.03.302 ( \u0019Mi\u0017kroskopie)"
      subtext: Werkstattgebäude National Museum (Nutzung)
      subtext_bold: 3.302@2806
    - id: 4224.01.136
      type: room
      name: "4224.01.136 ( \u0019Mi\u0017kroskopie)"
      subtext: "weihenstephan, ZIEL IV - Biowissenschaften"
      subtext_bold: 1.36@4224
    - id: 4224.01.156
      type: room
      name: "4224.01.156 ( \u0019Mi\u0017kroskopierraum S1-Genlabor)"
      subtext: "weihenstephan, ZIEL IV - Biowissenschaften"
      subtext_bold: 1.56@4224
    - id: 4317.01.121
      type: room
      name: "4317.01.121 ( \u0019Mi\u0017kroskopierraum)"
      subtext: "weihenstephan, Tierwissenschaften"
      subtext_bold: 1.21@4317
    - id: 4404.EG.003
      type: room
      name: "4404.EG.003 ( \u0019Mi\u0017kroskopie)"
      subtext: "limnologische-station-iffeldorf, Seminargebäude"
      subtext_bold: 003@4404
    - id: 0103.U1.301
      type: room
      name: "0103.U1.301 ( FIB-\u0019Mi\u0017kroskopierraum)"
      subtext: "stammgelände, E-Technik El. Maschinen / Geräte (N3)"
      subtext_bold: "-1301@0103"
    - id: 4124.EG.320
      type: room
      name: "4124.EG.320 ( L1 \u0019Mi\u0017kroorganismen)"
      subtext: "weihenstephan, ZIEL II – Molekulare Biowissenschaften"
      subtext_bold: E/3.20@4124
  n_visible: 10
  estimatedTotalHits: 1000
- facet: sites_buildings
  entries: []
  n_visible: 0
  estimatedTotalHits: 28
