server/main-api/src/search/search_executor/snapshots/navigatum_main_api__search__search_executor__test__good_queries-46.snap
---
source: main-api/src/search/search_executor/mod.rs
description: "typo + it's 'Fachschaftsbüro' in the data"
expression: actual
info: fachschaft pyhsik should get 5101.EG.257
---
- facet: rooms
  entries:
    - id: 0104.EG.413
      type: room
      name: "0104.EG.413 ( Elektroniklabor \u0019Fachschaft\u0017 EI)"
      subtext: "stammgelände, E-Technik Elektrophysik (N4)"
      subtext_bold: N0413@0104
    - id: 5101.EG.257
      type: room
      name: "5101.EG.257 (Büro \u0019Fachschaft\u0017 Mathe \u0019Physik\u0017 Informatik Chemie / MPIC)"
      subtext: "garching, Physik I"
      subtext_bold: 2257@5101
    - id: 5606.EG.036
      type: room
      name: "5606.EG.036 (Büro \u0019Fachschaft\u0017 Mathe \u0019Physik\u0017 Informatik Chemie / MPIC)"
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: 00.06.036@5606
    - id: 5606.EG.037
      type: room
      name: "5606.EG.037 (Besprechungsraum \u0019Fachschaft\u0017 Mathe \u0019Physik\u0017 Informatik Chemie / MPIC)"
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: 00.06.037@5606
    - id: 5406.01.650C
      type: room
      name: "5406.01.650C (Büro \u0019Fachschaft\u0017 Mathe \u0019Physik\u0017 Informatik Chemie / MPIC)"
      subtext: "garching, Chemie"
      subtext_bold: 26503@5406
    - id: 5606.EG.038
      type: room
      name: "5606.EG.038 (Lager \u0019Fachschaft\u0017 Mathe \u0019Physik\u0017 Informatik Chemie / MPIC)"
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: 00.06.038@5606
    - id: 5606.EG.039
      type: room
      name: "5606.EG.039 (Skriptenverkauf \u0019Fachschaft\u0017 Mathe \u0019Physik\u0017 Informatik Chemie / MPIC)"
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: 00.06.039@5606
    - id: 2333.01.103
      type: room
      name: "2333.01.103 ( \u0019Fachschaft\u0017 Sport)"
      subtext: "campus-im-olympiapark-sz, CiO/SG Hallen Ost"
      subtext_bold: 01.2333.103@2333
    - id: 9377.01.130
      type: room
      name: "9377.01.130 ( Projektraum \u0019Fachschaft\u0017)"
      subtext: "taufkirchen-ottobr., Lise-Meitner-Straße 9-11"
      subtext_bold: 01.130@9377
    - id: 0504.EG.424
      type: room
      name: "0504.EG.424 ( Arbeitsraum/Studenten/\u0019Fachschaft\u0017)"
      subtext: "stammgelände, Landwirtschaftsbau (Z4)"
      subtext_bold: 0424@0504
  n_visible: 10
  estimatedTotalHits: 37
- facet: sites_buildings
  entries: []
  n_visible: 0
  estimatedTotalHits: 0
